--- a/Ronix.Butterfly.Wpf/Ronix.Butterfly.Wpf.csproj
+++ b/Ronix.Butterfly.Wpf/Ronix.Butterfly.Wpf.csproj
@@ -31,7 +31,7 @@
 
   <ItemGroup>
     <None Update="AppSettings.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
